--- a/src/ci_cd_fastapi/requirements.txt
+++ b/src/ci_cd_fastapi/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile
 #
+alembic==1.6.5
+    # via -r requirements.in
 anyio==3.4.0
     # via starlette
 asgiref==3.4.1
@@ -14,18 +16,38 @@ click==8.0.3
     #   uvicorn
 fastapi==0.70.0
     # via -r requirements.in
+greenlet==1.1.2
+    # via sqlalchemy
 h11==0.12.0
     # via uvicorn
 idna==3.3
     # via anyio
+mako==1.1.6
+    # via alembic
+markupsafe==2.0.1
+    # via mako
 pep517==0.12.0
     # via pip-tools
 pip-tools==6.4.0
     # via -r requirements.in
 pydantic==1.9.0
     # via fastapi
+pymysql==1.0.2
+    # via -r requirements.in
+python-dateutil==2.8.2
+    # via alembic
+python-dotenv==0.15.0
+    # via -r requirements.in
+python-editor==1.0.4
+    # via alembic
+six==1.16.0
+    # via python-dateutil
 sniffio==1.2.0
     # via anyio
+sqlalchemy==1.4.22
+    # via
+    #   -r requirements.in
+    #   alembic
 starlette==0.16.0
     # via fastapi
 tomli==2.0.0
